--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mythic GM</title>
   <link rel="stylesheet" href="assets/style.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
+
+
 </head>
 <body>
   <h1 id="logo">Mythic GM</h1>
@@ -21,7 +24,7 @@
     <div id="how-to-modal" class="modal">
       <!--Content of modal-->
       <div class="how-to-content">
-        <button class="close">&times</button>
+        <button class="close"><i class="far fa-times-circle"></i></button>
         <p>The how to section text will go here. 
           <br> Lorem ipsum dolor sit amet, 
           consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
