change tab container from nav to a div and change padding on tabs

--- a/index.html
+++ b/index.html
@@ -39,14 +39,14 @@
     </div>
     <i id="sound" class="fas fa-volume-mute"><audio src=""></audio></i>
   </section>
-  <nav id="nav-container">
-     <!--tab links-->
-     <div class="tab">
-      <button class="tablink" onclick="openTab(event, 'Oracle')">Oracle</button>
+    <div id="tab-container">
+      <!--tab links-->
+      <div class="tab">
+      <button class="tablink" onclick="openTab(event, 'Oracle')">Lists</button>
       <button class="tablink" onclick="openTab(event, 'Scene')">Scene</button>
-      <button class="tablink" onclick="openTab(event, 'lists')">Lists</button>
+      <button class="tablink" onclick="openTab(event, 'lists')">Oracle</button>
     </div>
-  </nav>
+  </div>
   <section id="emulator">
     <div id="emulator-window">
       <!--tab content-->
