add script to open and close tabs in emulator window

--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
     <div id="tab-container">
       <!--tab links-->
       <div class="tab">
-      <button class="tablink" onclick="openTab(event, 'Oracle')">Lists</button>
-      <button class="tablink" onclick="openTab(event, 'Scene')">Scene</button>
-      <button class="tablink" onclick="openTab(event, 'lists')">Oracle</button>
+      <button id="list-button" class="tablink">Lists</button>
+      <button id="scene-button" class="tablink">Scene</button>
+      <button id="oracle-button" class="tablink">Oracle</button>
     </div>
   </div>
   <section id="emulator">
