add style to position bottom row elements in oracle tab evenly and add style to sound icon to position it over emulator window

--- a/index.html
+++ b/index.html
@@ -47,18 +47,43 @@
       <button id="oracle-button" class="tablink">Oracle</button>
     </div>
   </div>
+
+  <!--emulator-->
   <section id="emulator">
     <div id="emulator-window">
       <!--tab content-->
+
+      <!--oracle-->
       <div id="oracle" class="tabcontent">
-        <p>oracle contents</p>
-      </div>
-      <div id="scene" class="tabcontent">
-        <p>scenes content</p>
-      </div>
-      <div id="list" class="tabcontent">
-        <p>list contents</p>
-      </div>
+
+        <div class="bottom-row">
+          
+          <div id="chaos">
+            <h2 id="chaos-txt">Chaos</h2>
+            <h3 id="chaos-number">5</h3>
+          </div>
+  
+          <div class="fate-qs">
+            <button id="question-btn">
+              Question Fate
+            </button>
+          </div>
+  
+          <div class="fate-qs">
+            <button id="event-btn">
+              Event
+            </button>
+          </div>
+  
+        </div>
+  
+        <div id="scene" class="tabcontent">
+          <p>scenes content</p>
+        </div>
+        <div id="list" class="tabcontent">
+          <p>list contents</p>
+        </div>
+        </div>
     </div>
   </section>
 
