add footer html and basic style

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <div id="oracle" class="tabcontent">
 
         <div class="bottom-row">
-          
+
           <div id="chaos">
             <h2 id="chaos-txt">Chaos</h2>
             <h3 id="chaos-number">5</h3>
@@ -87,7 +87,13 @@
     </div>
   </section>
 
-  <footer>Footer section</footer>
+  <footer>
+    <div id="footer">
+      <i class="fab fa-github"></i>
+      <i class="fab fa-discord"></i>
+      <i class="fab fa-linkedin"></i>
+    </div>
+  </footer>
 
 
 
