--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative&family=Raleway&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Eater&display=swap" rel="stylesheet">
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -55,6 +56,11 @@
 
       <!--oracle-->
       <div id="oracle" class="tabcontent">
+        <div id="text-window">
+          <div class="buffer"></div>
+          <div class="word">yes</div>
+          <!-- <div class="word">Exceptional</div> -->
+        </div>
 
         <div class="bottom-row">
 
