add style to text reveal animation

--- a/index.html
+++ b/index.html
@@ -58,7 +58,10 @@
       <div id="oracle" class="tabcontent">
         <div id="text-window">
           <div class="buffer"></div>
-          <div class="word">yes</div>
+          <div>
+            <p class="word">yes<br></p>
+            <p class="word">Exceptional</p>
+          </div>
           <!-- <div class="word">Exceptional</div> -->
         </div>
 
