add script to link text animation to question button in oracle tab

--- a/index.html
+++ b/index.html
@@ -58,11 +58,9 @@
       <div id="oracle" class="tabcontent">
         <div id="text-window">
           <div class="buffer"></div>
-          <div>
-            <p class="word">yes<br></p>
-            <p class="word">Exceptional</p>
+          <div id="text-display">
+            
           </div>
-          <!-- <div class="word">Exceptional</div> -->
         </div>
 
         <div class="bottom-row">
