--- a/index.html
+++ b/index.html
@@ -69,7 +69,43 @@
             <h2 id="chaos-txt">Chaos</h2>
             <h3 id="chaos-number">5</h3>
           </div>
-  
+
+          <div id="odds-container">
+            <div class="odds-slider">
+              <div class="odds-value">Impossible</div>
+            </div>
+            <div class="odds-slider">
+              <div class="odds-value">Very unlikely</div>
+            </div>
+            <div class="odds-slider">
+              <div class="odds-value">Unlikely</div>
+            </div>
+            <div class="odds-slider">
+              <div class="odds-value">50/50</div>
+            </div>
+            <div class="odds-slider">
+              <div class="odds-value">Somewhat likely</div>
+            </div>
+            <div class="odds-slider">
+              <div class="odds-value">Likely</div>
+            </div>
+            <div class="odds-slider">
+              <div class="odds-value">Very Likely</div>
+            </div>
+            <div class="odds-slider">
+              <div class="odds-value">Near sure thing</div>
+            </div>
+            <div class="odds-slider">
+              <div class="odds-value">A sure thing</div>
+            </div>
+            <div class="odds-slider">
+              <div class="odds-value">Has to be</div>
+            </div>
+             <!-- Next and previous buttons  -->
+            <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+            <a class="next" onclick="plusSlides(1)">&#10095;</a>
+          </div>
+
           <div class="fate-qs">
             <button id="question-btn">
               Question Fate
