--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
     <div id="tab-container">
       <!--tab links-->
       <div class="tab">
-      <button id="list-button" class="tablink">Lists</button>
-      <button id="scene-button" class="tablink">Scene</button>
-      <button id="oracle-button" class="tablink">Oracle</button>
-    </div>
+        <button id="list-button" class="tablink">Lists</button>
+        <button id="scene-button" class="tablink">Scene</button>
+        <button id="oracle-button" class="tablink">Oracle</button>
+      </div>
   </div>
 
   <!--emulator-->
@@ -69,42 +69,48 @@
             <h2 id="chaos-txt">Chaos</h2>
             <h3 id="chaos-number">5</h3>
           </div>
+          
+          <div id="odds-modal" class="odds-modal">
 
-          <div id="odds-container">
-            <div class="odds-slider">
-              <div class="odds-value">Impossible</div>
+              <h3 id="odds-header">Set odds of yes answer</h3>
+            <div id="odds-container">
+              <div class="odds-slider">
+                <div class="odds-value">50/50</div>
+              </div>
+              <div class="odds-slider">
+                <div class="odds-value">Somewhat likely</div>
+              </div>
+              <div class="odds-slider">
+                <div class="odds-value">Likely</div>
+              </div>
+              <div class="odds-slider">
+                <div class="odds-value">Very Likely</div>
+              </div>
+              <div class="odds-slider">
+                <div class="odds-value">Near sure thing</div>
+              </div>
+              <div class="odds-slider">
+                <div class="odds-value">A sure thing</div>
+              </div>
+              <div class="odds-slider">
+                <div class="odds-value">Has to be</div>
+              </div>
+              <div class="odds-slider">
+                <div class="odds-value">Impossible</div>
+              </div>
+              <div class="odds-slider">
+                <div class="odds-value">Very unlikely</div>
+              </div>
+              <div class="odds-slider">
+                <div class="odds-value">Unlikely</div>
+              </div>
+               <!-- Next and previous buttons  -->
+              <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+              <a class="next" onclick="plusSlides(1)">&#10095;</a>
             </div>
-            <div class="odds-slider">
-              <div class="odds-value">Very unlikely</div>
-            </div>
-            <div class="odds-slider">
-              <div class="odds-value">Unlikely</div>
-            </div>
-            <div class="odds-slider">
-              <div class="odds-value">50/50</div>
-            </div>
-            <div class="odds-slider">
-              <div class="odds-value">Somewhat likely</div>
-            </div>
-            <div class="odds-slider">
-              <div class="odds-value">Likely</div>
-            </div>
-            <div class="odds-slider">
-              <div class="odds-value">Very Likely</div>
-            </div>
-            <div class="odds-slider">
-              <div class="odds-value">Near sure thing</div>
-            </div>
-            <div class="odds-slider">
-              <div class="odds-value">A sure thing</div>
-            </div>
-            <div class="odds-slider">
-              <div class="odds-value">Has to be</div>
-            </div>
-             <!-- Next and previous buttons  -->
-            <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-            <a class="next" onclick="plusSlides(1)">&#10095;</a>
+            <div id="set-odds"><button id="set-odds-button"><i class="fas fa-check-circle"></i></button></div>
           </div>
+          
 
           <div class="fate-qs">
             <button id="question-btn">
