add scene button to bottom row of oracle tab. Chaos number is now on top left of each tab

--- a/index.html
+++ b/index.html
@@ -52,6 +52,10 @@
   <!--emulator-->
   <section id="emulator">
     <div id="emulator-window">
+      <div id="chaos">
+        <h2 id="chaos-txt">Chaos</h2>
+        <h3 id="chaos-number">5</h3>
+      </div>
       <!--tab content-->
 
       <!--oracle-->
@@ -108,9 +112,10 @@
         <!--Emulator window bottom row of buttons-->
         <div class="bottom-row">
 
-          <div id="chaos">
-            <h2 id="chaos-txt">Chaos</h2>
-            <h3 id="chaos-number">5</h3>
+          <div class="fate-qs">
+            <button id="scene-btn">
+              Scene
+            </button>
           </div>
 
           <div class="fate-qs">
