add script for changing chaos number between 1 and 9 with clickable arrows

--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
       <div id="chaos">
         <h2 id="chaos-txt">Chaos</h2>
         <h3 id="chaos-number">5</h3>
+        <a id="chaos-prev">&#10094;</a>
+            <a id="chaos-next">&#10095;</a>
       </div>
       <!--tab content-->
 
