change left and right arrows in every instance to be a button for better accessibility

--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
       <div id="chaos">
         <h2 id="chaos-txt">Chaos</h2>
         <h3 id="chaos-number">5</h3>
-        <a id="chaos-prev">&#10094;</a>
-            <a id="chaos-next">&#10095;</a>
+        <button id="chaos-prev">&#10094;</button>
+            <button id="chaos-next">&#10095;</button>
       </div>
       <!--tab content-->
 
@@ -99,8 +99,8 @@
               <div class="odds-value">Unlikely</div>
             </div>
              <!-- Next and previous buttons  -->
-            <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-            <a class="next" onclick="plusSlides(1)">&#10095;</a>
+            <button class="prev" onclick="plusSlides(-1)">&#10094;</button>
+            <button class="next" onclick="plusSlides(1)">&#10095;</button>
           </div>
           <!--modal close/submit button-->
           <div id="set-odds"><button id="set-odds-button"><i class="fas fa-check-circle"></i></button></div>
