--- a/index.html
+++ b/index.html
@@ -52,16 +52,16 @@
   <!--emulator-->
   <section id="emulator">
     <div id="emulator-window">
-      <div id="chaos">
-        <h2 id="chaos-txt">Chaos</h2>
-        <h3 id="chaos-number">5</h3>
-        <button id="chaos-prev">&#10094;</button>
-            <button id="chaos-next">&#10095;</button>
-      </div>
       <!--tab content-->
 
       <!--oracle-->
       <div id="oracle" class="tabcontent">
+        <div id="chaos">
+          <h2 id="chaos-txt">Chaos</h2>
+          <h3 id="chaos-number">5</h3>
+          <button id="chaos-prev">&#10094;</button>
+              <button id="chaos-next">&#10095;</button>
+        </div>
         <div id="text-window">
           <!--This modal is for setting the odds and is initially not displayed-->
           <div id="odds-modal" class="odds-modal">
@@ -133,14 +133,34 @@
           </div>
 
         </div>
-  
-        <div id="scene" class="tabcontent">
-          <p>scenes content</p>
+      </div>
+
+      <!--Scenes-->
+      <div id="scene" class="tabcontent">
+        <p>scenes content</p>
+      </div>
+
+      <!--lists-->
+      <div id="list" class="tabcontent">
+        <div id="list-container">
+          <div id="characters" class="list-box">
+            <h2 class="header">characters & groups</h2>
+            <input type="text" placeholder="Add important characters or groups here...">
+            <button id="character-btn" class="addBtn"><i class="fas fa-plus-circle"></i></button>
+            <ul id="char-ul">
+              <li>example</li>
+            </ul>
+          </div>
+          <div id="threads" class="list-box">
+            <h2 class="header">Threads</h2>
+            <input type="text" placeholder="Add story threads here">
+            <button id="thread-btn" class="addBtn"><i class="fas fa-plus-circle"></i></button>
+            <ul id="thread-ul">
+              <li>example</li>
+            </ul>
+          </div>
         </div>
-        <div id="list" class="tabcontent">
-          <p>list contents</p>
-        </div>
-        </div>
+      </div>
     </div>
   </section>
 
