add style for scrollbars to blend in with black and white colors

--- a/index.html
+++ b/index.html
@@ -145,14 +145,14 @@
         <div id="list-container">
           <div id="characters" class="list-box">
             <h2 class="header">characters & groups</h2>
-            <input id="char-input" type="text" placeholder="Add important characters or groups here...">
+            <input id="char-input" type="text" placeholder="Add character...">
             <button id="character-btn" class="addBtn"><i class="fas fa-plus-circle"></i></button>
             <ul id="char-ul">
             </ul>
           </div>
           <div id="threads" class="list-box">
             <h2 class="header">Threads</h2>
-            <input id="thread-input" type="text" placeholder="Add story threads here">
+            <input id="thread-input" type="text" placeholder="Add thread..">
             <button id="thread-btn" class="addBtn"><i class="fas fa-plus-circle"></i></button>
             <ul id="thread-ul">
             </ul>
