add media querys for emulator viewport height at smaller screen heights to give more room for text to breath. Add media queries for list tab contents to be responsive down to smaller screen width

--- a/index.html
+++ b/index.html
@@ -143,14 +143,14 @@
       <!--lists-->
       <div id="list" class="tabcontent">
         <div id="list-container">
-          <div id="characters" class="list-box">
+          <div id="characters" >
             <h2 class="header">characters & groups</h2>
             <input id="char-input" type="text" placeholder="Add character...">
             <button id="character-btn" class="addBtn"><i class="fas fa-plus-circle"></i></button>
             <ul id="char-ul">
             </ul>
           </div>
-          <div id="threads" class="list-box">
+          <div id="threads">
             <h2 class="header">Threads</h2>
             <input id="thread-input" type="text" placeholder="Add thread..">
             <button id="thread-btn" class="addBtn"><i class="fas fa-plus-circle"></i></button>
