add basic style and script to generate scene boxes in the scene tab

--- a/index.html
+++ b/index.html
@@ -137,7 +137,16 @@
 
       <!--Scenes-->
       <div id="scene" class="tabcontent">
-        <p>scenes content</p>
+        <div id="scene-window">
+
+        </div>
+        <div id="scene-bottom-row" class="bottom-row">
+          <div class="fate-qs">
+            <button id="add-scene-btn">
+              Add scene
+            </button>
+          </div>
+        </div>
       </div>
 
       <!--lists-->
