add media queries for smaller screen width and height for scene tab

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <div id="how-to-modal" class="modal">
         <!--Content of modal-->
         <div class="how-to-content">
-          <button class="close"><i class="far fa-times-circle"></i></button>
+          <button id="close-how-to"><i class="far fa-times-circle"></i></button>
           <p>The how to section text will go here. 
             <br> Lorem ipsum dolor sit amet, 
             consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
