add how to use section and style for how to modal window

--- a/index.html
+++ b/index.html
@@ -27,14 +27,120 @@
         <!--Content of modal-->
         <div class="how-to-content">
           <button id="close-how-to"><i class="far fa-times-circle"></i></button>
-          <p>The how to section text will go here. 
-            <br> Lorem ipsum dolor sit amet, 
-            consectetur adipiscing elit, sed do eiusmod tempor incididunt ut 
-            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud 
-            exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-            Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
-              dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non 
-              proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+          <h3> Table of Contents</h3>
+          <br>
+          <p><a href="#about">About</a></p>
+          <br>
+          <p><a href="#how-to-use">How to use</a></p>
+          <br>
+          <p><a href="#other-systems">Using with other systems</a></p>
+          <br>
+          <p><a href="#glossary">Glossary</a></p>
+          <br>
+          <br>
+          <h3 id="about">What is Mythic?</h3>
+          <br>
+          <p>Mythic is a tool for role playing games such as <a href="#">Dungeons & Dragons</a> and <a href="#">Call of Cthulhu</a>.</p>
+          <br>
+          <p>Most Role-Playing Games operate under the principle that there are players and there is a Game Master(GM).
+             The GM prepares all the details of an adventure, and then "runs" the players through that adventure. 
+             This usually requires a great deal of preparation on the part of the GM.</p>
+             <br>
+            <p>Mythic is different in that it requires no preparation from the GM. Mythic adventures are meant to be played off the cuff, 
+              with perhaps a few minutes of brainstorming to come up with the initial setup.</p>
+              <br>
+              <p>
+              Mythic can also be played entirely without a GM. The same mechanics in Mythic that allow a GM to run an 
+              adventure without preparation also allows a group of players to do without the GM.</p>
+              <br>
+              <p>If you don't know anything about role playing games, thats ok. Mythic can be used as a creative writing tool to
+                 generate ideas for chapters, characters and plot twists on the fly. 
+              </p>
+              <br>
+              <h3 id="how-to-use">Ok, but how does it work?</h3>
+              <br>
+              <p>
+              Start by coming up with a quick setup scene. Perhaps you are investigators tasked with investigating a haunted mansion, or a group of warriors
+              hired to protect a caravan travelling from town to town"
+              </p>
+              <br>
+              <p>
+                in the tab marked lists you can add any relevant non player characters and story threads. In our haunted mansion scenario the non player characters 
+                could consist of the owner of the house, the ghost said to haunt it etc. A thread could be to find and banish the ghost. If you have no ideas then you can 
+                generate an event in the oracle tab and use the random words as a guide.
+              </p>
+              <br>
+              <p>
+                Next, in the scene tab, add a new scene and write out the scene setup. In our haunted house example our investigators could decide they want to go to 
+                library to check any history pertaining to the house. 
+              </p>
+              <br>
+              <p>
+                When the scene is ready to begin, click the scene button in the oracle tab. If there is no change continue as planned, if it is altered, change the 
+                scene slightly, eg the library is closed due to renivations. If the scene is interrupted something entirely different happens. 
+              </p>
+              <br>
+              <p>
+                A scene interrupted will also give you a focus for the interruption. npc negative, pc positive, close a thread etc. Use this focus along with 
+              the event button to come up with the interruption to the scene. Refer to your lists for threads and characters. In our haunted house example a 
+              scene interrupted followed by npc negative and the event keywords betray & trust could mean the idea that the person who hired us turns out to be a 
+              liar and we should doubt his motives. Context is key and everything is completely open to interpritation. 
+              </p>
+              <br>
+              <p>
+                if you want to ask a question, use the question fate button in the oracle tab. Set the odds of the answer being yes and the oracle will give 
+                you a yes or no answer to your question. if your answer is followed by the keyword "exceptional", then your answer yes or no should have an additional 
+                sense of weight to the answer. Our investigators ask the oracle "was the person who hired of us suspected of any crimes in the past?" 
+              </p>
+              <br>
+              <p>Possible interpritations</p>
+              <p>yes - yes he was</p>
+              <p>no - no he wasnt</p>
+              <p>yes exceptional - yes he was and he killed someone in the house you are investigating</p>
+              <p>no exceptional - no, in fact he is a local philanthropist and is known for healping the sick and needy</p>
+              <br>
+              <p>
+                Sometimes the answer will also be followed by a random event. The random event will also give you a focus and you can again use the event button 
+                to generate two random keywords to come up with the meaning. 
+              </p>
+              <br>
+              <p>
+                A scene can be as short or as long as you like. When the main action of your scene is over, change the chaos number up or down depending on how in control 
+                the characters were in the last scene. Our investigators are finished at the library and gained a lot of information with no trouble. The players decide 
+                to lower the chaos by 1.
+              </p>
+              <p>
+                At the end of a scene it is also a good idea to update any new characters or threads in the list tabs. 
+              </p>
+              <br>
+              <p>
+                The higher the chaos number the greater chance of scene interrupts and yes answers in the oracle. Start a new scene and repeat the process 
+                as much as you like or until the session comes to a natural conclusion.
+              </p>
+              <br>
+              <h3 id="other-systems">How to use this with another gaming system?</h3>
+              <br>
+              <p>
+                Mythic provides structure and ideas for your adventure to unfold naturally, but what about rules for fighting or skill checks?
+              </p>
+              <br>
+              <p>
+                Each gaming system will have its own rules for combat, for chases, for skill checks. If you get caught in a confrontation playing a game 
+                of Dungeons and Dragons, then use these rules for resolving the combat.
+              </p>
+              <br>
+              <p>
+                You can also just use mythic and question fate to resolve anything you want. You can ask fate " I punch the zombie, does it die?" set 
+                realistic odds for your character and see what happens.
+              </p>
+              <br>
+              <h3 id="glossary">Glossary</h3>
+
+
+
+
+
+            <br>       
         </div>
       </div>
     </div>
