refactor code to open and close tab, fix issue with scene tab scroll bar being pushed outside the window because of padding

--- a/index.html
+++ b/index.html
@@ -149,9 +149,9 @@
     <div id="tab-container">
       <!--tab links-->
       <div class="tab">
-        <button id="list-button" class="tablink">Lists</button>
-        <button id="scene-button" class="tablink">Scene</button>
-        <button id="oracle-button" class="tablink">Oracle</button>
+        <button id="list-button" class="tablink" onclick="openTab(event, 'list')">Lists</button>
+        <button id="scene-button" class="tablink" onclick="openTab(event, 'scene')">Scene</button>
+        <button id="oracle-button" class="tablink active" onclick="openTab(event, 'oracle')">Oracle</button>
       </div>
   </div>
 
