--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative&family=Raleway&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Eater&display=swap" rel="stylesheet">
   <meta charset="UTF-8">
+  <meta name="description" content="Mythic Gm is digital implimentation of the Mythic GM book. It is a tool for roleplaying games to emulate the game master.">
+  <meta name="keywords" content="mythic gm, gm emulator, dm emulator, solo ttrpg, Role-Playing dungeon master, game master, tabletop rpg, ttrpg, dungeons and dragons">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mythic GM</title>
@@ -267,7 +269,7 @@
           </div>
           <div id="threads">
             <h2 class="header">Threads</h2>
-            <input id="thread-input" type="text" placeholder="Add thread..">
+            <input id="thread-input" type="text" placeholder="Add thread.." required>
             <button id="thread-btn" class="addBtn"><i class="fas fa-plus-circle"></i></button>
             <ul id="thread-ul">
             </ul>
