change scene tab name to journal as it was a bit confusing with oracle tab scene button

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
       <!--tab links-->
       <div class="tab">
         <button id="list-button" class="tablink" onclick="openTab(event, 'list')">Lists</button>
-        <button id="scene-button" class="tablink" onclick="openTab(event, 'scene')">Scene</button>
+        <button id="journal-button" class="tablink" onclick="openTab(event, 'journal')">Journal</button>
         <button id="oracle-button" class="tablink active" onclick="openTab(event, 'oracle')">Oracle</button>
       </div>
   </div>
@@ -223,27 +223,27 @@
 
           <div class="fate-qs">
             <button id="scene-btn">
-              Scene
+              start scene <i class="fas fa-play"></i>
             </button>
           </div>
 
           <div class="fate-qs">
             <button id="question-btn">
-              Question Fate
+              Qs <i class="fas fa-question"></i>
             </button>
           </div>
   
           <div class="fate-qs">
             <button id="event-btn">
-              Event
+              Event <i class="fas fa-book-reader"></i>
             </button>
           </div>
 
         </div>
       </div>
 
-      <!--Scenes-->
-      <div id="scene" class="tabcontent">
+      <!--journal-->
+      <div id="journal" class="tabcontent">
         <div id="scene-window">
 
         </div>
