remove icons from oracle tab buttons

--- a/index.html
+++ b/index.html
@@ -223,19 +223,19 @@
 
           <div class="fate-qs">
             <button id="scene-btn">
-              start scene <i class="fas fa-play"></i>
+              start scene 
             </button>
           </div>
 
           <div class="fate-qs">
             <button id="question-btn">
-              Qs <i class="fas fa-question"></i>
+              question
             </button>
           </div>
   
           <div class="fate-qs">
             <button id="event-btn">
-              Event <i class="fas fa-book-reader"></i>
+              Event 
             </button>
           </div>
 
