add footer links and hover effect

--- a/index.html
+++ b/index.html
@@ -280,9 +280,15 @@
 
   <footer>
     <div id="footer">
-      <i class="fab fa-github"></i>
-      <i class="fab fa-discord"></i>
-      <i class="fab fa-linkedin"></i>
+      <a href="https://github.com/xiaoniuniu89" target="_blank">
+        <i class="fab fa-github"></i>
+      </a>
+      <a href="https://discord.com/channels/883249633474801674/883249633474801677" target="_blank">
+        <i class="fab fa-discord"></i>
+      </a>
+      <a href="https://www.linkedin.com/in/daniel-callaghan-5ab143203/" target="_blank">
+        <i class="fab fa-linkedin"></i>
+      </a>
     </div>
   </footer>
 
