fix issue with background color when how to modal was opened. the background color will now fill the entire page.

--- a/index.html
+++ b/index.html
@@ -40,15 +40,31 @@
           <p><a href="#glossary">Glossary</a></p>
           <br>
           <br>
-          <h3 id="about">What is Mythic?</h3>
+          <h3 id="about">What is a roleplaying game?</h3>
           <br>
-          <p>Mythic is a tool for role playing games such as <a href="#">Dungeons & Dragons</a> and <a href="#">Call of Cthulhu</a>.</p>
+          <p>Role playing games such as <a href="https://dnd.wizards.com/" target="_blank">Dungeons & Dragons</a> and <a href="https://www.chaosium.com/call-of-cthulhu-rpg/" target="_blank">Call of Cthulhu</a>
+             are collaborative story telling games that uses dice to determine results.</p>
           <br>
-          <p>Most Role-Playing Games operate under the principle that there are players and there is a Game Master(GM).
-             The GM prepares all the details of an adventure, and then "runs" the players through that adventure. 
-             This usually requires a great deal of preparation on the part of the GM.</p>
-             <br>
-            <p>Mythic is different in that it requires no preparation from the GM. Mythic adventures are meant to be played off the cuff, 
+          <p>In most roleplaying games, there are two distinct roles. The Game Master(GM) and the players. </p>
+          <br>
+          <p>The GM is the main storyteller for the game. They create and describe the adventure for the players, 
+            introduce conflicts, control any non-playable characters(NPC) the players interact with, 
+            give the players goals to accomplish, and describe the outcomes of dice rolls.  
+          </p>
+          <br>
+          <p>The players each control one character that they can create themselves. They work together to 
+            overcome any conflicts and plotlines introduced by the GM. They do this by describing what they 
+            want to do and rolling dice to see if they were successful or not. 
+          </p>
+          <br>
+          <p>In most games, player actions are limited by the choices given to them by the designer of the game.
+             Role-playing games are different in that the players have complete control over where they want to go and what they want to do.
+          </p>
+          <br>
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/2PEt5RdNHNw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; 
+          clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <br>
+          <p>Mythic is different in that it requires no preparation from the GM. Mythic adventures are meant to be played off the cuff, 
               with perhaps a few minutes of brainstorming to come up with the initial setup.</p>
               <br>
               <p>
